Fix userlist overflow bug

--- a/client/src/components/TotalUsers/TotalUsers.css
+++ b/client/src/components/TotalUsers/TotalUsers.css
@@ -10,6 +10,7 @@
     display: flex;
     align-items: center;
     padding: 10px;
+    
 }
 
 .refresh {
@@ -37,4 +38,9 @@
     border:rgb(245, 243, 243);
     box-shadow : 0.5px 0.5px 0.5px rgb(168, 166, 166);
     cursor:default;
+}
+
+.totalUserList{
+    overflow-y: scroll;
+    height: 570px;
 }
